nohup.out
Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/lib/python3.8/threading.py", line 932, in _bootstrap_inner
    self.run()
  File "/usr/lib/python3.8/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/utils/autoreload.py", line 53, in wrapper
    fn(*args, **kwargs)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/management/commands/runserver.py", line 118, in inner_run
    self.check(display_num_errors=True)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/management/base.py", line 392, in check
    all_issues = checks.run_checks(
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/checks/registry.py", line 70, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/checks/urls.py", line 13, in check_url_config
    return check_resolver(resolver)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/checks/urls.py", line 23, in check_resolver
    return check_method()
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/urls/resolvers.py", line 408, in check
    for pattern in self.url_patterns:
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/urls/resolvers.py", line 589, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/urls/resolvers.py", line 582, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 783, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/runner/ProjectKithen/mysite/urls.py", line 19, in <module>
    from mysite.core import views as core_views
ModuleNotFoundError: No module named 'mysite.core'
/home/runner/ProjectKithen/mysite/urls.py changed, reloading.
Performing system checks...

Watching for file changes with StatReloader
Not Found: /
[06/Dec/2020 11:55:33] "GET / HTTP/1.1" 404 2060
Not Found: /
[06/Dec/2020 11:55:33] "GET / HTTP/1.1" 404 2060
Not Found: /
[06/Dec/2020 11:55:34] "GET / HTTP/1.1" 404 2060
/home/runner/ProjectKithen/mysite/urls.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
December 06, 2020 - 11:55:31
Django version 3.1.4, using settings 'mysite.settings'
Starting development server at http://0.0.0.0:3000/
Quit the server with CONTROL-C.
Watching for file changes with StatReloader
Exception in thread django-main-thread:
Traceback (most recent call last):
  File "/usr/lib/python3.8/threading.py", line 932, in _bootstrap_inner
    self.run()
  File "/usr/lib/python3.8/threading.py", line 870, in run
    self._target(*self._args, **self._kwargs)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/utils/autoreload.py", line 53, in wrapper
    fn(*args, **kwargs)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/management/commands/runserver.py", line 118, in inner_run
    self.check(display_num_errors=True)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/management/base.py", line 392, in check
    all_issues = checks.run_checks(
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/checks/registry.py", line 70, in run_checks
    new_errors = check(app_configs=app_configs, databases=databases)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/checks/urls.py", line 13, in check_url_config
    return check_resolver(resolver)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/checks/urls.py", line 23, in check_resolver
    return check_method()
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/urls/resolvers.py", line 408, in check
    for pattern in self.url_patterns:
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/urls/resolvers.py", line 589, in url_patterns
    patterns = getattr(self.urlconf_module, "urlpatterns", self.urlconf_module)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/utils/functional.py", line 48, in __get__
    res = instance.__dict__[self.name] = self.func(instance)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/urls/resolvers.py", line 582, in urlconf_module
    return import_module(self.urlconf_name)
  File "/usr/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 783, in exec_module
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/runner/ProjectKithen/mysite/urls.py", line 23, in <module>
    url(r'^signup/$', core_views.signup, name='signup'),   
NameError: name 'core_views' is not defined
/home/runner/ProjectKithen/mysite/urls.py changed, reloading.
Performing system checks...

Watching for file changes with StatReloader
[06/Dec/2020 11:55:58] "GET /admin/ HTTP/1.1" 200 3306
[06/Dec/2020 11:55:58] "GET /static/admin/css/nav_sidebar.css HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/css/base.css HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/css/dashboard.css HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/css/responsive.css HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/js/nav_sidebar.js HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/css/fonts.css HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/img/icon-changelink.svg HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/img/icon-addlink.svg HTTP/1.1" 304 0
[06/Dec/2020 11:55:58] "GET /static/admin/fonts/Roboto-Light-webfont.woff HTTP/1.1" 304 0
[06/Dec/2020 11:55:59] "GET /static/admin/fonts/Roboto-Regular-webfont.woff HTTP/1.1" 304 0
[06/Dec/2020 11:55:59] "GET /static/admin/fonts/Roboto-Bold-webfont.woff HTTP/1.1" 304 0
Not Found: /
[06/Dec/2020 11:56:39] "GET / HTTP/1.1" 404 2060
Not Found: /
[06/Dec/2020 11:56:52] "GET / HTTP/1.1" 404 2059
Not Found: /
[06/Dec/2020 11:56:55] "GET / HTTP/1.1" 404 2059
Not Found: /
[06/Dec/2020 11:56:56] "GET / HTTP/1.1" 404 2059
Not Found: /
[06/Dec/2020 11:56:57] "GET / HTTP/1.1" 404 2059
Not Found: /
[06/Dec/2020 11:58:43] "GET / HTTP/1.1" 404 2060
/home/runner/ProjectKithen/mysite/settings.py changed, reloading.
Performing system checks...

System check identified no issues (0 silenced).
December 06, 2020 - 11:55:57
Django version 3.1.4, using settings 'mysite.settings'
Starting development server at http://0.0.0.0:3000/
Quit the server with CONTROL-C.
Traceback (most recent call last):
  File "manage.py", line 21, in <module>
    main()
  File "manage.py", line 17, in main
    execute_from_command_line(sys.argv)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/management/__init__.py", line 401, in execute_from_command_line
    utility.execute()
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/core/management/__init__.py", line 345, in execute
    settings.INSTALLED_APPS
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/conf/__init__.py", line 83, in __getattr__
    self._setup(name)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/conf/__init__.py", line 70, in _setup
    self._wrapped = Settings(settings_module)
  File "/opt/virtualenvs/python3/lib/python3.8/site-packages/django/conf/__init__.py", line 177, in __init__
    mod = importlib.import_module(self.SETTINGS_MODULE)
  File "/usr/lib/python3.8/importlib/__init__.py", line 127, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1014, in _gcd_import
  File "<frozen importlib._bootstrap>", line 991, in _find_and_load
  File "<frozen importlib._bootstrap>", line 975, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 671, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 779, in exec_module
  File "<frozen importlib._bootstrap_external>", line 916, in get_code
  File "<frozen importlib._bootstrap_external>", line 846, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/home/runner/ProjectKithen/mysite/settings.py", line 57
    'DIRS': [os.path.],
                     ^
SyntaxError: invalid syntax
